<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="24dp"
    tools:context=".activities.CreateAccountActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="64dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:drawableStartCompat="@mipmap/ic_launcher"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textSize="32sp"
            android:fontFamily="@font/signlode_font"
            android:textColor="@android:color/white"
            android:text="@string/app_name" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:textSize="16sp"
            android:fontFamily="@font/quick_sand"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:text="@string/register_discrip" />
        
        <EditText
            android:id="@+id/inputName"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:background="@drawable/edit_txt_bg"
            android:hint="Person name"
            app:backgroundTint="@null"
            android:includeFontPadding="false"
            android:fontFamily="@font/quick_sand"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="12dp"
            android:drawableStart="@drawable/custom_person_ic"
            android:drawablePadding="8dp"
            android:inputType="textPersonName" />
        
        <EditText
            android:id="@+id/inputPhnNum"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:background="@drawable/edit_txt_bg"
            android:hint="Phone Number"
            app:backgroundTint="@null"
            android:includeFontPadding="false"
            android:fontFamily="@font/quick_sand"
            android:textColor="@android:color/white"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="12dp"
            android:drawableStart="@drawable/custom_phone_ic"
            android:drawablePadding="8dp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/createMail"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:background="@drawable/edit_txt_bg"
            android:hint="@string/email_address_hint"
            app:backgroundTint="@null"
            android:includeFontPadding="false"
            android:fontFamily="@font/quick_sand"
            android:textColor="@android:color/white"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="12dp"
            android:drawableStart="@drawable/custom_mail_ic"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/createPass"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:background="@drawable/edit_txt_bg"
            android:hint="@string/password_hint"
            app:backgroundTint="@null"
            android:includeFontPadding="false"
            android:fontFamily="@font/quick_sand"
            android:textColor="@android:color/white"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="12dp"
            android:inputType="textPassword"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/custom_lock_ic" />
        
        
        <Button
            android:id="@+id/nextBtn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Next"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:backgroundTint="@null"
            android:onClick="validateDetails"
            android:background="@drawable/btn_bg" />

        <Button
            android:id="@+id/continueWithGoogleBtn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Continue with google"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            app:backgroundTint="@null"
            android:background="@drawable/google_btn_bg"
            android:drawableStart="@drawable/google_focused"
            android:drawablePadding="4dp" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:textSize="16sp"
            android:fontFamily="@font/quick_sand"
            android:textColor="@android:color/white"
            android:layout_marginTop="12dp"
            android:text="Already have an Account?"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:textSize="16sp"
            android:fontFamily="@font/quick_sand"
            android:textColor="@android:color/white"
            android:layout_marginTop="4dp"
            android:text="Login"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>
